--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo
@@ -24,6 +24,7 @@
                 o salir en YouTube. Excepto si 
                 eres un rockstar. Pero estadisticamente
                 no lo eres... por ahora.</p>
+                <p>Suscribete y dale like!</p>
             </div>
         </div>    
     </body>
