--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
-<html>
+git<html>
     <head>
-        <title>Bienvenido a Hyperblog</title>
+        <title>El titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
