Relleno adicional al blogpost y un mensaje de contribución

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@ git<html>
                 o salir en YouTube. Excepto si 
                 eres un rockstar. Pero estadísticamente
                 no lo eres... por ahora.</p>
-                <p>Suscríbete y dale like!</p>
+                <p>Suscríbete y dale like! Esto lo escribo para rellenar </p>
             </div>
 	    <div id="footer">
 		Hecho con amor en Platzi <3
