README modificado para explicar bien el proyecto a los estudiantes

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,8 @@ git<html>
                 las cosas incre&iacute;bles que se 
                 pueden hacer con ramas</p>
                 <p><img src="imagenes/equipo.jpg" width="100%"/></p>
+                <p><a
+                href="https://imgur.com/uIWx7oO"><img src = "https://i.imgur.com/uIWx7oO.jpg" width="100%" title="descripcion de la imagen"/></a></p>
                 <p>Los blogs son la mejor
                 forma de compartir
                 información y tus ideas.
